# MethAUR

./: CMakeLists.txt  PKGBUILD  README.md  install.sh  methaur.1
src/: methaur.c
